// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the SectorCard component Should match snapshot - user is an admin, displayEditButtons not passed. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="rounded-md border-3 border-transparent"
    data-testid="sector-card"
  >
    <div
      class="flex border border-dial-gray shadow-md px-3 h-16 rounded-md"
    >
      <div
        class="flex items-center"
      >
        <div
          class="inline-block font-semibold text-button-gray"
        >
          Example Sector
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the SectorCard component Should match snapshot - user is an admin, displayEditButtons passed. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="hover:border-dial-sunshine text-button-gray rounded-md border-3 border-transparent"
    data-testid="sector-card"
  >
    <div
      class="flex border border-dial-gray shadow-md px-3 h-16 rounded-md"
    >
      <div
        class="flex-1 cursor-pointer flex items-center"
      >
        <div
          class="inline-flex items-center gap-x-2 inline-block font-semibold text-button-gray"
        >
          Example Sector
          <svg
            data-tooltip-content="Displayable"
            data-tooltip-id="react-tooltip"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
            />
          </svg>
        </div>
      </div>
      <div
        class="inline-flex items-center gap-x-2"
      >
        <button
          class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
          data-testid="edit-button"
          type="button"
        >
          <svg
            class="inline pb-0.5"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 20h9"
            />
            <path
              d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
            />
          </svg>
          <span
            class="text-sm px-1"
          >
            Edit
          </span>
        </button>
        <button
          class="delete-button gap-x-1.5"
          data-testid="delete-button"
          type="button"
        >
          <svg
            class="text-sm"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"
            />
          </svg>
          <span
            class="text-sm"
          >
            Delete
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the SectorCard component Should match snapshot - user is not an admin, displayEditButtons not passed. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="rounded-md border-3 border-transparent"
    data-testid="sector-card"
  >
    <div
      class="flex border border-dial-gray shadow-md px-3 h-16 rounded-md"
    >
      <div
        class="flex items-center"
      >
        <div
          class="inline-block font-semibold text-button-gray"
        >
          Example Sector
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the SectorCard component Should match snapshot - user is not an admin, displayEditButtons passed. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="hover:border-dial-sunshine text-button-gray rounded-md border-3 border-transparent"
    data-testid="sector-card"
  >
    <div
      class="flex border border-dial-gray shadow-md px-3 h-16 rounded-md"
    >
      <div
        class="flex-1 cursor-pointer flex items-center"
      >
        <div
          class="inline-flex items-center gap-x-2 inline-block font-semibold text-button-gray"
        >
          Example Sector
        </div>
      </div>
    </div>
  </div>
</div>
`;
